updating index and css file. Fixed the main section and aside alignment but need to work on the navigation and footer

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,45 +8,29 @@ body {
     background-color: #d9dcd6;
 }
 
-.nav {
-    padding-top: 15px;
-    margin-right: 20px;
-    float: right;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 20px;
-}
-
-.header {
-    padding: 20px;
+nav{
+    padding:20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
     color: #ffffff;
 }
 
-.main-header h1 {
+title{
    display: inline;
     font-size: 48px;
-    color: #d9dcd6;
-    text-align: left;
-}
-
-.main-header ul {
-    list-style-type: none;
-}
-
-.main-header ul li {
-    display: inline-block;
-    margin-left: 25px;
 }
 
 a {
     color: #ffffff;
     text-decoration: none;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    text-align: right;
+    list-style: none;
+    display:inline-block;
+    float:right;
+    margin-left: 25px;
 }
 
-p {
-    font-size: 16px;
-}
 
 .hero {
     height: 800px;
@@ -57,8 +41,17 @@ p {
     background-position: center;
 }
 
-.content{
+main{
     width: 75%;
+    float:left;
+}
+
+aside{
+    width: 20%;
+    float: right;
+}
+
+.content{
     display: inline-block;
     margin-left: 20px;
     margin-bottom: 20px;
@@ -67,6 +60,7 @@ p {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #0072bb;
     color: #ffffff;
+    font-size: 16px;
 }
 
 .content h2 {
@@ -74,31 +68,28 @@ p {
     font-size: 36px;
 }
 
-.float-left {
+.left {
     float: left;
     margin-right: 25px;
+    max-height: 200px;
 }
 
-.float-right {
+.right {
     float: right;
     margin-left: 25px;
+    max-height: 200px;
 }
 
-
-.aside {
-    margin-right: 20px;
-    padding: 20px;
-    clear: both;
-    float: right;
-    width: 20%;
-    height: 100%;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #2589bd;
-}
 
 .benefits {
+    display: inline-block;
+    height: 300px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     margin-bottom: 32px;
     color: #ffffff;
+    background-color: #2a607c;
+    font-size: 16px;
+    text-align: center;
 }
 
 
@@ -108,37 +99,11 @@ p {
 }
 
 
-.benefit-lead img {
+.symbol{
     display: block;
     margin: 10px auto;
     max-width: 150px;
 }
-
-.benefit-brand img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.benefit-cost img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.search-engine-optimization img {
-    max-height: 200px;
-}
-
-.online-reputation-management img {
-    max-height: 200px;
-}
-
-.social-media-marketing img {
-    max-height: 200px;
-}
-
-
 
 
 .footer {
@@ -147,6 +112,7 @@ p {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
     font-size: 20px;
+  
 }
 
 
